[gd_scene load_steps=4 format=3 uid="uid://c0c1f7mrcynbm"]

[ext_resource type="Script" path="res://scripts/projectile.gd" id="1_wv5hm"]
[ext_resource type="Texture2D" uid="uid://box3ttywocjl" path="res://assets/projectile-export-green.png" id="2_s0nd8"]

[sub_resource type="CircleShape2D" id="CircleShape2D_eokp0"]
radius = 8.0

[node name="Projectile" type="Area2D"]
collision_layer = 4
collision_mask = 6
script = ExtResource("1_wv5hm")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_s0nd8")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_eokp0")

[node name="SelfDestructTimer" type="Timer" parent="."]
wait_time = 1.25
one_shot = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="SelfDestructTimer" to="." method="_on_self_destruct_timer_timeout"]
